# cdm-tools-mcp-server

./: .env.example  .gitignore  app.yaml  databricks.yml  pyproject.toml  requirements.txt  test_mcp.py  test_mcp_client.py
cdm_tools/: config.py  file_access.py  job_setup.py  kb_queries.py  models.py  notebook_generator.py  transform_preview.py  validation_checks.py
cdm_tools/classification/: classifier.py
cdm_tools/ingestion/: format_detector.py  loader.py  profiler.py
genie-code/: instructions.md
knowledge_base/: SKILL.md  erp_schemas.json  pipeline_notebooks.json  sample_data_inventory.md
knowledge_base/cdm_specs/: ap_open_invoices.json  ar_open_invoices.json  general_ledger_detail.json
knowledge_base/configs/: ID12.json  ID13.json  ID14.json  ID15.json  ID16.json  ID19.json  ID2.json  ID20.json  ID21.json  ID22.json  ID23.json  ID24.json  ID28.json  ID29.json  ID3.json  ID4.json  ID6.json  ID74.json  ID75.json  ID76.json
knowledge_base/templates/: transform_general_ledger_detail.py
notebooks/: seed_knowledge_base.py
server/: app.py  main.py  tools.py  utils.py
tests/: test_server.py
